--- a/index.html
+++ b/index.html
@@ -45,91 +45,118 @@
     <h1 class='ui block header'>
         JavaScript Widget
     </h1>
-    <p>
-        <div class='ui relaxed items'>
-            <script>
-                writeCardItems([
-                    'thombashi_ghscard',
-                ]);
-            </script>
-        </div>
+    <div class='ui relaxed items'>
+        <script>
+            writeCardItems([
+                'thombashi_ghscard',
+            ]);
+        </script>
+    </div>
 
-        GitHub cards in this page are created by
-        <a href=//github.com/thombashi/ghscard>ghscard </a>. <br />
+    GitHub cards in this page are created by
+    <a href=//github.com/thombashi/ghscard>ghscard </a>. <br />
 
-        <h1 class='ui block header'> Python Libraries </h1>
+    <h1 class='ui block header'>
+        Python Libraries
+    </h1>
+    <div class='ui relaxed items'>
+        <script>
+            writeCardItems([
+                'thombashi_DataProperty',
+                'thombashi_DateTimeRange',
+                'thombashi_pathvalidate',
+                'thombashi_pytablewriter',
+                'thombashi_pingparsing',
+                'thombashi_pytablereader',
+                'thombashi_SimpleSQLite',
+                'thombashi_subprocrunner',
+                'thombashi_typepy',
+            ]);
+        </script>
+    </div>
 
-        <div class='ui relaxed items'>
-            <script>
-                writeCardItems([
-                    'thombashi_appconfigpy',
-                    'thombashi_DataProperty',
-                    'thombashi_DateTimeRange',
-                    'thombashi_pathvalidate',
-                    'thombashi_pytablewriter',
-                    'thombashi_pingparsing',
-                    'thombashi_pytablereader',
-                    'thombashi_SimpleSQLite',
-                    'thombashi_subprocrunner',
-                    'thombashi_typepy',
-                ]);
-            </script>
-        </div>
+    <!--
+    <h1 class='ui block header'>
+        Jupyter Notebook
+    </h1>
+    <div class='ui relaxed items'>
+        <script>
+            writeCardItems([
+                'thombashi_PythonExamples',
+            ]);
+        </script>
+    </div>
+    -->
 
+    <h1 class='ui block header'>
+        Forks
+    </h1>
+    <div class='ui relaxed items'>
+        <script>
+            writeCardItems([
+                'thombashi_allpairspy',
+            ]);
+        </script>
         <!--
-        <h1 class='ui block header'>
-            Jupyter Notebook
-        </h1>
-        <div class='ui relaxed items'>
-            <script>
-                writeCardItems([
-                    'thombashi_PythonExamples',
-                ]);
-            </script>
+        <div class='item'>
+            <div class='ghscard' src='data/thombashi_NFStest.json' chart-display='none'></div>
         </div>
         -->
+    </div>
 
-        <h1 class='ui block header'>
-            Forks
-        </h1>
-        <div class='ui relaxed items'>
-            <script>
-                writeCardItems([
-                    'thombashi_allpairspy',
-                ]);
-            </script>
-            <div class='item'>
-                <div class='ghscard' src='data/thombashi_NFStest.json' chart-display='none'></div>
-            </div>
-        </div>
-
-        <script src='//cdn.jsdelivr.net/npm/ghscard@0.5.2/dist/ghscard.min.js'></script>
-        <!-- <script src='js/ghscard.min.js'></script> -->
-
-        <h1 class='ui block header'>
-            Links
-        </h1>
-        <div class='ui list'>
-            <a class='item' href=//www.openhub.net/accounts/thombashi>openhub </a> <a class='item'
-                href=//twitter.com/thombashi>twitter </a> </div> <script>
-                    $('#toc').toc();
-                </script>
-
-        <footer>
-            Tsuyoshi Hombashi (tsuyoshi.hombashi@gmail.com)
-        </footer>
-
+    <h1 class='ui block header'>
+        pytest plugins
+    </h1>
+    <div class='ui relaxed items'>
         <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-71868288-5', 'auto');
-            ga('send', 'pageview');
+            writeCardItems([
+                'thombashi_pytest-md-report',
+            ]);
         </script>
+    </div>
+
+    <script src='//cdn.jsdelivr.net/npm/ghscard@0.5.2/dist/ghscard.min.js'></script>
+    <!-- <script src='js/ghscard.min.js'></script> -->
+
+    <h1 class='ui block header'>
+        Sponsors
+    </h1>
+    <div class='ui relaxed items'>
+        <a href="https://github.com/chasbecker">
+            <img src="https://avatars0.githubusercontent.com/u/44389260?s=48&u=6da7176e51ae2654bcfd22564772ef8a3bb22318&v=4"
+                 alt="Charles Becker (chasbecker)"
+                 title="Charles Becker (chasbecker)">
+        </a>
+        <br>
+        <a href="https://github.com/sponsors/thombashi">Become a sponsor</a>
+    </div>
+
+    <h1 class='ui block header'>
+        Links
+    </h1>
+    <div class='ui list'>
+        <a class='item' href=//www.openhub.net/accounts/thombashi>openhub </a>
+        <a class='item' href=//twitter.com/thombashi>twitter </a>
+    </div>
+    <script>
+        $('#toc').toc();
+    </script>
+
+    <footer>
+        Tsuyoshi Hombashi (tsuyoshi.hombashi at gmail.com)
+    </footer>
+
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-71868288-5', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
